--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>Ceci est une landing page pour un site web basique.</p>
     <nav>
         <ul>
-
+            <li><a href="francais.html">Joyeuses Pâques!</a></li>
         </ul>
     </nav>
   </body>
