--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <nav>
         <ul>
             <li><a href="francais.html">Joyeuses Pâques!</a></li>
+            <li><a href="espagnol.html">¡Feliz Pascua!</a></li>
         </ul>
     </nav>
   </body>
