Page en anglais

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <ul>
             <li><a href="francais.html">Joyeuses Pâques!</a></li>
             <li><a href="espagnol.html">¡Feliz Pascua!</a></li>
+            <li><a href="anglais.html">Happy Easter!</a></li>
         </ul>
     </nav>
   </body>
