--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <li><a href="francais.html">Joyeuses Pâques!</a></li>
             <li><a href="espagnol.html">¡Feliz Pascua!</a></li>
             <li><a href="anglais.html">Happy Easter!</a></li>
+            <li><a href="italien.html">Buona Pasqua!</a></li>
         </ul>
     </nav>
   </body>
