--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li><a href="espagnol.html">¡Feliz Pascua!</a></li>
             <li><a href="anglais.html">Happy Easter!</a></li>
             <li><a href="italien.html">Buona Pasqua!</a></li>
+            <li><a href="portugais.html">Feliz Páscoa!</a></li>
         </ul>
     </nav>
   </body>
