Page en allemand

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li><a href="italien.html">Buona Pasqua!</a></li>
             <li><a href="portugais.html">Feliz Páscoa!</a></li>
             <li><a href="polonais.html">Wesołych Świąt Wielkanocnych!</a></li>
+            <li><a href="allemand.html">Frohe Ostern!</a></li>
         </ul>
     </nav>
   </body>
