Page en hollandais

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li><a href="portugais.html">Feliz Páscoa!</a></li>
             <li><a href="polonais.html">Wesołych Świąt Wielkanocnych!</a></li>
             <li><a href="allemand.html">Frohe Ostern!</a></li>
+            <li><a href="hollandais.html">Vrolijk Pasen!</a></li>
         </ul>
     </nav>
   </body>
